--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
@@ -41,6 +42,7 @@
     "@types/styled-components": "^5.1.2",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~38.0.0",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~3.9.5"
   },
   "private": true
