--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-text-gradient": "^0.1.7",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
   },
