--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-constants": "~9.1.1",
@@ -33,6 +34,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-text-gradient": "^0.1.7",
     "react-native-web": "~0.11.7",
     "styled-components": "^5.1.1"
@@ -44,6 +46,7 @@
     "@types/styled-components": "^5.1.2",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~38.0.0",
+    "json-server": "^0.16.1",
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~3.9.5"
   },
